--- a/bamboo_bear_deluxe.html
+++ b/bamboo_bear_deluxe.html
@@ -136,7 +136,7 @@
 
     <div style="max-width: 600px;">
 
-      <!-- <div style="max-width: 600px;background-color: #fafdfe;box-shadow: 0 0 10px rgba(0, 0, 0, .2);"> -->
+      <!-- <div style="max-width: 600px;background-color: #1D4C2F;box-shadow: 0 0 10px rgba(0, 0, 0, .2);"> -->
 
       <!-- Preheader (remove comment) -->
       <div
