--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
 
   <!--[if (gte mso 9)|(IE)]>
       <style type="text/css">
-         body {background-color: #dde0e1!important;}
+         body {background-color: #1D4C2F!important;}
          body, table, td, p, a {font-family: sans-serif, Arial, Helvetica!important;}
       </style>
    <![endif]-->
 
 
   <center
-    style="width: 100%; table-layout: fixed; background-image: url('https://cdn.jsdelivr.net/gh/dmytro-selikhov/bamboo_bear_deluxe@main/bg.webp'); background-size: cover; background-color: #dde0e1; padding-top: 0px; padding-bottom: 0px;">
+    style="width: 100%; table-layout: fixed; background-image: url('https://cdn.jsdelivr.net/gh/dmytro-selikhov/bamboo_bear_deluxe@main/bg.webp'); background-size: cover; background-color: #1D4C2F; padding-top: 0px; padding-bottom: 0px;">
 
 
     <div style="max-width: 600px;">
 
-      <!-- <div style="max-width: 600px;background-color: #fafdfe;box-shadow: 0 0 10px rgba(0, 0, 0, .2);"> -->
+      <!-- <div style="max-width: 600px;background-color: #1D4C2F;box-shadow: 0 0 10px rgba(0, 0, 0, .2);"> -->
 
       <!-- Preheader (remove comment) -->
       <div
